# fairmofstat

./: .gitignore  README.md  pyproject.toml
fairmofstat/: extract.py  filetyper.py
