[tool.poetry]
name = "fairmofstat"
version = "0.1.0"
description = ""
authors = ["Dinga Wonanke <dak52@uclive.ac.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
# ase = "^3.25.0"
seaborn = "^0.13.2"
msgpack = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
